2022-09-01T16:32:23Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2973347173
* notice: last 14d: unq all: 12 38
* notice: prev accum: outdated-unq outdated-all / unq all: 285 450 / 310 487
* notice: next accum: outdated-unq outdated-all / unq all: 285 450 / 310 488
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-09-01]

2022-09-01T08:30:49Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2970094217
* notice: last 14d: unq all: 12 37
* notice: prev accum: outdated-unq outdated-all / unq all: 283 447 / 309 486
* notice: next accum: outdated-unq outdated-all / unq all: 285 450 / 310 487
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-08-18] / [2022-09-01]

2022-09-01T02:24:20Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2968442872
* notice: last 14d: unq all: 13 39
* notice: prev accum: outdated-unq outdated-all / unq all: 283 447 / 307 484
* notice: next accum: outdated-unq outdated-all / unq all: 283 447 / 309 486
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2022-08-31]

2022-08-31T16:32:27Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2965500372
* notice: last 14d: unq all: 12 37
* notice: prev accum: outdated-unq outdated-all / unq all: 282 446 / 307 484
* notice: next accum: outdated-unq outdated-all / unq all: 283 447 / 307 484
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-17] / []

2022-08-31T02:43:40Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2960960520