@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-01T16:32:23Z",
+  "timestamp" : "2022-09-02T08:29:00Z",
   "count_outdated" : 450,
   "uniques_outdated" : 285,
-  "count" : 488,
-  "uniques" : 310,
+  "count" : 489,
+  "uniques" : 311,
   "clones" : [
     {
       "timestamp": "2022-08-20T00:00:00Z",
@@ -86,6 +86,13 @@
       "timestamp": "2022-09-01T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
