@@ -1,5 +1,5 @@
 {
-  "count": 38,
+  "count": 39,
   "uniques": 12,
   "clones": [
     {
@@ -60,6 +60,11 @@
     {
       "timestamp": "2022-09-01T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-02T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
