@@ -1,3 +1,11 @@
+2022-09-02T08:29:00Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2977677958
+* notice: last 14d: unq all: 12 39
+* notice: prev accum: outdated-unq outdated-all / unq all: 285 450 / 310 488
+* notice: next accum: outdated-unq outdated-all / unq all: 285 450 / 311 489
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-02]
+
 2022-09-01T16:32:23Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2973347173
 * notice: last 14d: unq all: 12 38
